# RebelCALC

./: .gitignore  CMakeLists.txt  README.md  RebelCALC_Progress_Tracker.md  build.bat  build.sh  download_gtest.ps1  download_lua.ps1  download_yaml_cpp.ps1  program_discription.md  progress.md  run_tests.bat  run_tests.sh
config/: config.yaml
docs/: development_roadmap.md  engineering_modules.md  input_processor_usage.md  integration_guide.md  next_phase_development_plan.md  plot2d_usage.md  plot3d_usage.md  user_guide.md
examples/: CMakeLists.txt  engineering_demo.cpp  integration_demo.cpp  optimization_demo.cpp  plot2d_demo.cpp  plot3d_demo.cpp  plot3d_demo.html  repl_demo.cpp  visualization_demo.cpp
scripts/: engineering_examples.lua  init.lua  utils.lua
scripts/examples/: basic_math.lua
src/: CMakeLists.txt  main.cpp
src/backend/: calculator.cpp  calculator.h  complex.cpp  complex.h  matrix.cpp  matrix.h  numeric_solver.cpp  numeric_solver.h  statistics.cpp  statistics.h  symbolic_engine.cpp  symbolic_engine.h  units.cpp  units.h
src/engineering/: cad.cpp  cad.h  electrical.cpp  electrical.h  physics.cpp  physics.h
src/integration/: api.cpp  api.h  cad.cpp  cad.h
src/scripts/: lua_engine.cpp  lua_engine.h
src/solvers/: cfd.h  circuit.h  fem.h  optimization.h
src/tests/: CMakeLists.txt  test_calculator.cpp  test_complex.cpp  test_lua_engine.cpp  test_matrix.cpp  test_numeric_solver.cpp  test_statistics.cpp  test_symbolic_engine.cpp  test_theme_manager.cpp  test_units.cpp
src/ui/: input_processor.cpp  input_processor.h  terminal_ui.cpp  terminal_ui.h  theme_manager.cpp  theme_manager.h
src/visualization/: datavis.h  plot2d.cpp  plot2d.h  plot3d.cpp  plot3d.h
tests/: CMakeLists.txt  test_engineering.cpp
